--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -54,8 +54,13 @@ for (i = 0; i < close.length; i++) {
 <!-- Images (Portfolio) -->
     <div class="w3-row">
         <div class="w3-quarter w3-container w3-border-right">
-            <div class="w3-container w3-margin-bottom w3-round w3-center">
-                <h1 class="w3-border-bottom">Rank</h1>
+            <div class="w3-container w3-margin-bottom w3-round">
+                <h1 class="w3-border-bottom w3-center">Rank</h1>
+                <div class="w3-container">
+                    {% for pet in rank %}
+                        <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="w3-rest w3-container" id="pets">
