--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -3,6 +3,7 @@
 <title>PetsBook Home Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
+<script type=text/javascript src="../static/jquery.sticky.js"></script>
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/font-awesome/css/font-awesome.min.css">
@@ -11,7 +12,7 @@
 <body>
 
 <!-- Header -->
-<div class="alert success">
+<div class="alert success" style="width: 100%">
     <span class="closebtn">&times;</span>
     <p>You have successfully signed in to your account!</p>
 </div>
@@ -34,18 +35,18 @@ for (i = 0; i < close.length; i++) {
   </div>
 
 <!-- Navbar (placed at the bottom of the header image) -->
-  <ul class="w3-navbar w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
+<ul class="w3-navbar w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
     <li><a href="{{ url_for("home") }}">Home</a></li>
     <li><a href="">Profile</a></li>
     <li><a href="{{ url_for("do_signout") }}">Sign Out</a></li>
-  </ul>
+</ul>
 </header>
 
-<!-- Navbar on small screens -->
+{#<!-- Navbar on small screens -->#}
 <ul class="w3-navbar w3-green w3-hide-large w3-hide-medium">
-  <li><a href="{{ url_for("home") }}">Home</a></li>
-  <li><a href="">Profile</a></li>
-  <li><a href="{{ url_for("do_signout") }}">Sign Out</a></li>
+    <li><a href="{{ url_for("home") }}">Home</a></li>
+    <li><a href="">Profile</a></li>
+    <li><a href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
 <!-- Page content -->
@@ -53,17 +54,27 @@ for (i = 0; i < close.length; i++) {
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-container w3-border-right">
-            <div class="w3-container w3-margin-bottom w3-round">
-                <h1 class="w3-border-bottom w3-center">Rank</h1>
+        <div class="w3-quarter w3-container">
+            <div class="w3-container w3-margin-bottom" id="sidebar">
+                <h1 class="w3-green w3-center">Rank</h1>
                 <div class="w3-container">
                     {% for pet in rank %}
                         <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
                     {% endfor %}
                 </div>
             </div>
+            <script>
+                $(document).ready(function(){
+                    $("#sidebar").sticky({topSpacing : 10, bottomSpacing : 10});
+                });
+                $(window).resize(function () {
+                    if (jQuery(window).innerWidth() < 584) {
+                        $("#sidebar").unstick();
+                    }
+                })
+            </script>
         </div>
-        <div class="w3-rest w3-container" id="pets">
+        <div class="w3-rest w3-container w3-border-left">
             {% for user in users %}
                 {% if user.pet != None %}
                     {% set block_name = "block_" + user.username %}
@@ -122,10 +133,7 @@ for (i = 0; i < close.length; i++) {
                 {% endif %}
             {% endfor %}
         </div>
-
     </div>
-
-
 </div>
 </body>
 </html>
