--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -25,7 +25,7 @@
 </ul>
 <div class="w3-animate-right w3-margin w3-round alert success">
     <span class="closebtn">&times;</span>
-    <p>You have successfully signed in to your account!</p>
+    <p>Hello, {{ liked_user }}! You have successfully signed in to your account!</p>
 </div>
 <script>
 var close = document.getElementsByClassName("closebtn");
@@ -66,7 +66,7 @@ for (i = 0; i < close.length; i++) {
 <!-- Navbar (placed at the bottom of the header image) -->
     <ul class="w3-navbar w3-xlarge w3-red w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-        <li><a class="w3-hover-green" href="">Profile</a></li>
+        <li><a class="w3-hover-green" href="{{ url_for("get_profile") }}">Profile</a></li>
         <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
     </ul>
 </header>
@@ -74,7 +74,7 @@ for (i = 0; i < close.length; i++) {
 {#<!-- Navbar on small screens -->#}
 <ul class="w3-navbar w3-large w3-margin-top w3-red w3-hide-large w3-hide-medium">
     <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-    <li><a class="w3-hover-green" href="">Profile</a></li>
+    <li><a class="w3-hover-green" href="{{ url_for("get_profile") }}">Profile</a></li>
     <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
@@ -83,12 +83,14 @@ for (i = 0; i < close.length; i++) {
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-container">
-            <div class="w3-container w3-border-bottom" id="sidebar">
-                <h1 class="w3-margin-top w3-round w3-green w3-center">Top 15</h1>
+        <div class="w3-quarter w3-container w3-margin-top">
+            <div class="w3-border-bottom" id="sidebar">
+                <div class="w3-container w3-green w3-round w3-center">
+                    <h1>Top 15</h1>
+                </div>
                 <div class="w3-container">
                     {% for pet in rank %}
-                        <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
+                        <h5>{{ pet[1] }} : {{ pet[0] }}</h5>
                     {% endfor %}
                 <h5>Test</h5>
                 <h5>Test</h5>
@@ -128,7 +130,7 @@ for (i = 0; i < close.length; i++) {
                         <div class="w3-third w3-container">
                             <h5><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5>
                             <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
-                            <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h5>
+                            <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>
                             {% if liked_user in user.pet.liked_users %}
                                 <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>
                                 <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
@@ -164,7 +166,7 @@ for (i = 0; i < close.length; i++) {
                             </div>
                             {% for i in range(0,4) %}
                                 <div class="w3-half">
-                                    <img src="{{ user.pet.upload_info.img_upload }}" width="100%">
+                                    <img src="{{ user.pet.upload.img_upload }}" width="100%">
                                 </div>
                             {% endfor %}
                         </div>
