--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,7 +74,7 @@
             <div class="w3-third w3-container w3-margin-bottom">
                 <div class="w3-card-2" id="sidebar">
                     <div class="w3-container w3-green w3-center">
-                        <h1>Your Profile</h1>
+                        <h1>Info</h1>
                     </div>
                     <img class="w3-image" src="{{ user.pet.img_ava }}" style="width: 100%">
                     <div class="w3-container">
@@ -134,6 +134,7 @@
                         </form>
                     </div>
                 </div>
+
             </div>
         </div>
 
