--- a/templates/profile.html
+++ b/templates/profile.html
@@ -66,7 +66,7 @@
 <!-- Page content -->
 <div class="w3-margin-bottom" style="margin-top: 32px">
     {% if not user.pet %}
-        <div class="w3-container w3-margin-top w3-hide-small">
+        <div class="w3-container w3-margin-top">
             <div class="w3-animate-right w3-round alert warning" style="margin: 16px">
                 <span class="closebtn">&times;</span>
                 <p>Hi, {{ user.username }}! Update your profile to start sharing your pet!</p>
@@ -100,75 +100,8 @@
                                 resize: none;
                             }
                         </style>
-                        <textarea name="name" form="update_profile" placeholder="Enter your pet name here!" maxlength="25" style="width: 25%; height: 60px" required></textarea>
-                        <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" maxlength="75" style="width: 100%; height: 100px" required></textarea>
-                        <div style="height: 0px; overflow: hidden">
-                                <input type="file" id="img_ava" name="img_ava">
-                        </div>
-                        <button type="button" class="w3-red w3-btn-block w3-round w3-margin-bottom" onclick="chooseFile();">Get your pet a profile picture</button>
-                        <script>
-                            function chooseFile() {
-                                $("#img_ava").click();
-                            }
-                        </script>
-                        <div class="w3-container w3-center">
-                            <img class="w3-image w3-margin-bottom" src="" id="img_preview">
-                        </div>
-                        <script>
-                            function readURL(input) {
-                                if (input.files && input.files[0]) {
-                                    var reader = new FileReader();
-                                    reader.onload = function (e) {
-                                        $('#img_preview').attr('src', e.target.result);
-                                    };
-                                    reader.readAsDataURL(input.files[0]);
-                                }
-                            }
-                            $("#img_ava").change(function(){
-                                readURL(this);
-                            });
-                        </script>
-                        <input type="submit" name="update_profile" value="Submit" class="w3-button w3-green w3-btn-block w3-round w3-margin-bottom">
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="w3-container w3-margin-top w3-hide-large w3-hide-medium">
-            <div class="w3-animate-right w3-round alert warning">
-                <span class="closebtn">&times;</span>
-                <p>Hi, {{ user.username }}! Update your profile to start sharing your pet!</p>
-            </div>
-            <script>
-            var close = document.getElementsByClassName("closebtn");
-            var i;
-            for (i = 0; i < close.length; i++) {
-                close[i].onclick = function(){
-                    var div = this.parentElement;
-                    div.style.opacity = "0";
-                    setTimeout(function(){ div.style.display = "none"; }, 600);
-                }
-            }
-            </script>
-            <div class="w3-card-2 w3-margin">
-                <div class="w3-container w3-green">
-                    <h1>Update Profile</h1>
-                </div>
-                <div class="w3-container w3-margin-top">
-                    <form method="post" action="{{ url_for("get_profile", username=logged_in_user.username) }}" enctype="multipart/form-data" id="update_profile">
-                        <style>
-                            textarea {
-                                padding: 16px 16px;
-                                margin-bottom: 12px;
-                                box-sizing: border-box;
-                                border: 2px solid #ccc;
-                                border-radius: 4px;
-                                background-color: #f8f8f8;
-                                font-size: 16px;
-                                resize: none;
-                            }
-                        </style>
                         <textarea name="name" form="update_profile" placeholder="Enter your pet name here!" maxlength="25" style="width: 100%; height: 60px" required></textarea>
-                        <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" maxlength="100" style="width: 100%; height: 100px" required></textarea>
+                        <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" maxlength="75" style="width: 100%; height: 100px" required></textarea>
                         <div style="height: 0px; overflow: hidden">
                                 <input type="file" id="img_ava" name="img_ava">
                         </div>
@@ -205,16 +138,18 @@
             <div class="w3-quarter w3-container w3-margin-bottom">
                 <div class="w3-card-2 sidebar">
                     <div class="w3-container w3-green w3-center">
-                        <h1>Rank & Votes</h1>
+                        <h1>Info</h1>
                     </div>
                     <div class="w3-container">
                         {% if logged_in_user.username in user.pet.liked_users %}
                             <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
+                            <h1><i class="w3-text-green fa fa-picture-o w3-margin-left w3-margin-right"></i>{{ user.pet.uploads|length }}</h1>
                             <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i>{{ user.pet.like_count }}</h1>
                             <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
                         {% elif logged_in_user not in user.pet.liked_users %}
                             <div class="stats">
                                 <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
+                                <h1><i class="w3-text-green fa fa-picture-o w3-margin-left w3-margin-right"></i>{{ user.pet.uploads|length }}</h1>
                                 <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></h1>
                                 <button type="button" name="vote" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="vote">Vote</button>
                             </div>
@@ -243,7 +178,7 @@
             <div class="w3-quarter w3-container w3-margin-bottom">
                 <div class="w3-card-2 w3-round sidebar">
                     <div class="w3-container w3-green w3-center">
-                        <h1>Info</h1>
+                        <h1>Biography</h1>
                     </div>
                     <div class="w3-container w3-margin-top">
                         <img class="w3-round w3-image" src="../static/uploads/{{ user.pet.img_ava }}" style="width: 100%">
