--- a/templates/profile.html
+++ b/templates/profile.html
@@ -272,7 +272,7 @@
                         </div>
                     {% else %}
                         <div class="w3-container w3-center">
-                            <h3 class="w3-text-grey">No posts at the moment</h3>
+                            <h3 class="w3-text-grey">No post at the moment</h3>
                         </div>
                     {% endif %}
                 </div>
